--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -31,8 +31,10 @@ $border-color: #C3C3C5
 $border-color: rgba(black, .2)
 $light: #F5F5F5
 
-$container-max-widths: ( sm: 100%, md: 100%, lg: 100%, xl: 100%, xxl: 1980px )
 $grid-gutter-width: 3.75rem
+$container-max-widths: ( sm: 100%, md: 100%, lg: 100%, xl: 100%, xxl: 1980px )
+$container-gutter-width: px2rem(20)
+$container-gutter-width-md: $grid-gutter-width
 $spacer: 1.5rem
 
 $font-family-sans-serif: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
