--- a/assets/sass/_default/layouts/_main.sass
+++ b/assets/sass/_default/layouts/_main.sass
@@ -1,3 +1,6 @@
+\:root
+    --scroll-margin-top: 200px
+
 main
     &.page-with-blocks
         padding-bottom: 0
@@ -7,3 +10,10 @@ main
             // If a h2 directly follows the beginning of the article, no top margin
             > h2:first-of-type
                 margin-top: 0
+    div,
+    section,
+    h2
+        scroll-margin-top: var(--scroll-margin-top) !important
+        @include media-breakpoint-up(md)
+            scroll-margin-top: var(--scroll-margin-top) !important
+
