--- a/assets/sass/_default/layouts/_header.sass
+++ b/assets/sass/_default/layouts/_header.sass
@@ -19,6 +19,9 @@ header[role="banner"]
             position: absolute
             transition: background-color $header-transition
             width: 100%
+        .navbar
+            padding-bottom: px2rem(30)
+            padding-top: px2rem(30)
     .logo
         img
             height: 42px
