--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -2,3 +2,11 @@
     > *
         padding-bottom: 8rem
         padding-top: 4rem
+    + .blocks
+        > *
+            padding-top: 0
+
+    &-chapo
+        .container
+            .lead
+                margin-bottom: 0
