--- a/assets/sass/_default/partials/_menu-expand.sass
+++ b/assets/sass/_default/partials/_menu-expand.sass
@@ -44,6 +44,11 @@
             > ul
                 grid-gap: $spacer $grid-gutter-width
 
+    @include media-breakpoint-down(md)
+        .nav-level-1
+            > li:last-child a
+                padding-bottom: 0
+
 html.is-menu-open body
     @include media-breakpoint-down(lg)
         &::after
