--- a/assets/sass/_default/partials/_menu-expand.sass
+++ b/assets/sass/_default/partials/_menu-expand.sass
@@ -44,7 +44,7 @@
             > ul
                 grid-gap: $spacer $grid-gutter-width
 
-    @include media-breakpoint-down(md)
+    @include media-breakpoint-down(lg)
         .nav-level-1
             > li:last-child a
                 padding-bottom: 0
