aside page mobile

--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -2,6 +2,7 @@
     align-items: normal
     background-color: $site-color
     flex-direction: column
+    margin-bottom: 4rem
     padding-bottom: 0
     padding-top: px2rem(32)
     @include media-breakpoint-up(md)
