--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -2,6 +2,7 @@
 
 @import "_default/abstracts/mixins"
 
+@import "_default/layouts/content"
 @import "_default/layouts/footer"
 @import "_default/layouts/header"
 @import "_default/layouts/main"
