--- a/layouts/pages/list.html
+++ b/layouts/pages/list.html
@@ -11,6 +11,7 @@
               "context" .
           )
       }}
+      {{/* TEMP */}}
       <div class="blocks blocks-chapo">
         <div class="container">
           <div class="block-content">
@@ -39,6 +40,9 @@
     </div>
   {{ else }}
     {{ partial "pages/image.html" .Params.image }}
+    <div class="container">
+      {{ partial "pages/chapo.html" .Params.description_short }}
+    </div>
     {{/* LEGACY */}}{{ partial "pages/body.html" .Content }}
     {{/* LEGACY */}}{{ partial "pages/body.html" .Params.legacy_text }}
     {{ partial "pages/children.html" .Params.children }}
