--- a/assets/sass/_default/partials/_menu-expand.sass
+++ b/assets/sass/_default/partials/_menu-expand.sass
@@ -10,7 +10,7 @@
                 padding-left: $grid-gutter-width
                 padding-right: $grid-gutter-width
 
-    @include media-breakpoint-up(md)
+    @include media-breakpoint-up(lg)
         .has-children
             [data-bs-toggle="dropdown"]
                 &::before
