--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -2,11 +2,9 @@
     > *
         padding-bottom: 8rem
         padding-top: 4rem
-    + .blocks
-        > *
-            padding-top: 0
 
     &-chapo
         .container
+            padding-bottom: 4rem
             .lead
                 margin-bottom: 0
