--- a/assets/sass/diplomas/_widgets.sass
+++ b/assets/sass/diplomas/_widgets.sass
@@ -1,14 +1,30 @@
 ul.diplomas
-    li
+    > li
+        border-bottom: 0
         padding-bottom: $spacer
         padding-top: $spacer
         a
             @extend .h3
-            margin-bottom: 0
             text-decoration: none
             transition: color .3s
             &:hover
                 color: $program-color
+    .programs
+        margin-bottom: $grid-gutter-width
+        li
+            @include media-breakpoint-up(md)
+                > *
+                    width: 50%
+        a:first-of-type
+            @extend .h4
+            @include media-breakpoint-up(md)
+                padding-right: calc(#{$grid-gutter-width} / 2)
+            &::after
+                content: none
+        p
+            margin-bottom: 0
+            @include media-breakpoint-up(md)
+                padding-left: calc(#{$grid-gutter-width} / 2)
 
 
 .diplomas-select
