--- a/assets/sass/_default/layouts/_content.sass
+++ b/assets/sass/_default/layouts/_content.sass
@@ -2,9 +2,7 @@
     > aside
         @include media-breakpoint-down(md)
             background-color: darken($institute-color, .3)
-            border-top: 1px solid rgba(white, .2)
-            padding-bottom: px2rem(20)
-            padding-top: px2rem(20)
+            padding: 0
             position: sticky
             top: 0
             transition: top $header-transition
