--- a/assets/sass/_default/layouts/_content.sass
+++ b/assets/sass/_default/layouts/_content.sass
@@ -1,5 +1,7 @@
 .content-blocks
     > aside
+        @include media-breakpoint-up(md)
+            padding-top: 4rem
         @include media-breakpoint-down(md)
             background-color: darken($institute-color, .3)
             padding: 0
