--- a/assets/sass/diplomas/_pages.sass
+++ b/assets/sass/diplomas/_pages.sass
@@ -20,3 +20,5 @@
         dt:first-of-type,
         dd:first-of-type
             display: none
+    .block-timeline
+        background-color: $program-color
