--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -19,6 +19,9 @@
                     color: $gray-500
         .active
             color: $institute-color
+    .block-timeline
+        background-color: $institute-color
+
     @include media-breakpoint-down(md)
         .featured-image
             margin-left: - $container-gutter-width
