--- a/assets/sass/persons/_pages.sass
+++ b/assets/sass/persons/_pages.sass
@@ -13,3 +13,5 @@
                     color: $gray-500
         .active
             color: $institute-color
+    .block-timeline
+        background-color: $institute-color
