--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -29,6 +29,8 @@
             display: flex
             justify-content: space-between
             padding-top: $spacer
+    .block-timeline
+        background-color: $post-color
 
 .posts__page
     .lead
