--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -137,3 +137,6 @@
         td
             @include media-breakpoint-up(md)
                 padding-left: calc(#{$grid-gutter-width} / 2)
+
+    .block-timeline
+        background-color: $program-color
