--- a/assets/sass/diplomas/_pages.sass
+++ b/assets/sass/diplomas/_pages.sass
@@ -20,5 +20,7 @@
         dt:first-of-type,
         dd:first-of-type
             display: none
-    .block-timeline
+
+    .block-timeline,
+    aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $program-color
