--- a/assets/sass/home/_pages.sass
+++ b/assets/sass/home/_pages.sass
@@ -63,3 +63,6 @@
                         font-size: px2rem(14)
                         margin-left: px2rem(16)
                         position: static
+    .block-timeline,
+    aside ~ .blocks .block-call_to_action .call_to_action > div
+        background-color: $site-color
