--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -19,7 +19,9 @@
                     color: $gray-500
         .active
             color: $institute-color
-    .block-timeline
+
+    .block-timeline,
+    aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $institute-color
 
     @include media-breakpoint-down(md)
