--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -138,5 +138,6 @@
             @include media-breakpoint-up(md)
                 padding-left: calc(#{$grid-gutter-width} / 2)
 
-    .block-timeline
+    .block-timeline,
+    aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $program-color
