--- a/assets/sass/blocks/_call_to_action.sass
+++ b/assets/sass/blocks/_call_to_action.sass
@@ -7,6 +7,7 @@
                 a
                     &:nth-child(1):hover
                         background-color: $black
+                        border-color: $black
                         color: $white
                     &:nth-of-type(2),
                     &:nth-of-type(3)
