--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -29,7 +29,9 @@
             display: flex
             justify-content: space-between
             padding-top: $spacer
-    .block-timeline
+
+    .block-timeline,
+    aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $post-color
 
 .posts__page
