--- a/assets/sass/_theme/blocks/_timeline.sass
+++ b/assets/sass/_theme/blocks/_timeline.sass
@@ -13,7 +13,7 @@
             border: none
             color: white
             cursor: pointer
-            font-size: 20px
+            font-size: 1rem
             padding: calc(#{$grid-gutter-width}*.5)
             &:first-child
                 @extend .icon
@@ -61,7 +61,7 @@
         .event
             width: 85%
             hr
-                margin-bottom: 60px
+                margin-bottom: px2rem(90)
         .events
             position: relative
         .timeline-arrows
