--- a/assets/sass/_theme/blocks/_timeline.sass
+++ b/assets/sass/_theme/blocks/_timeline.sass
@@ -1,4 +1,5 @@
 .block-timeline
+    --min-title-height: 0px
     background-color: $primary
     color: white
     overflow: hidden
@@ -40,7 +41,12 @@
         scroll-snap-align: start
         transition: 0.3s opacity
         width: 50%
-        hr
+        .title
+            min-height: var(--min-title-height)
+        .line
+            background: white
+            height: 1px
+            margin-bottom: $paragraph-margin-bottom
             opacity: 1
             overflow: visible
             width: calc(100% + #{$grid-gutter-width})
@@ -60,11 +66,11 @@
     @include media-breakpoint-down(md)
         .event
             width: 85%
-            hr
+            .line
                 margin-bottom: px2rem(90)
         .events
             position: relative
         .timeline-arrows
             left: 0
             position: absolute
-            top: 50px
+            top: calc(#{px2rem(30)} + var(--min-title-height))
