Change site color

--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -1,6 +1,6 @@
 // Site variables
 $recherche: #EB7100
-$site-color: #002232
+$site-color: #951B81
 $institute-color: #32538D
 $post-color: #312783
 $program-color: #006633
