--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -23,7 +23,7 @@
 @import "blocks/call_to_action"
 @import "blocks/chapter"
 @import "blocks/gallery"
-@import "blocks/key_figures"
+// @import "blocks/key_figures"
 @import "blocks/pages"
 @import "blocks/video"
 
