--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -1,6 +1,6 @@
 // Site variables
 $recherche: #EB7100
-$site-color: #002232
+$site-color: #4C1540
 $institute-color: #32538D
 $post-color: #312783
 $program-color: #006633
@@ -14,7 +14,7 @@ $menu-background-color: $site-color
 
 // Hero
 $hero-height: 300px
-$hero-height-md: calc(800px - #{$header-height-md})
+$hero-height-md: calc(650px - #{$header-height-md})
 
 // Toc
 $toc-height: 78px
