--- a/assets/sass/_default/partials/_menu-expand.sass
+++ b/assets/sass/_default/partials/_menu-expand.sass
@@ -7,6 +7,7 @@
 
         > ul
             @include media-breakpoint-up(lg)
+                grid-template-columns: repeat(4, 1fr)
                 padding-left: $grid-gutter-width
                 padding-right: $grid-gutter-width
 
