--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -3,6 +3,7 @@
   <div class="container">
     <div>
       <h1>{{ partial "PrepareHTML" $title }}</h1>
+      <p>Le plus court chemin pour aller loin</p>
     </div>
     {{- if .Params.image }}
       {{ partial "commons/image.html"
