--- a/assets/sass/persons/_pages.sass
+++ b/assets/sass/persons/_pages.sass
@@ -13,5 +13,6 @@
                     color: $gray-500
         .active
             color: $institute-color
-    .block-timeline
+    .block-timeline,
+    aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $institute-color
