--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -19,7 +19,7 @@
     > div:first-of-type
         > div
             margin-top: $spacer
-            @include media-breakpoint-up(md)
+            @include media-breakpoint-up(xl)
                 margin-top: px2rem(120)
 
     > div + div
