--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -22,6 +22,7 @@
 @import "blocks/blocks"
 @import "blocks/call_to_action"
 @import "blocks/chapter"
+@import "blocks/files"
 @import "blocks/gallery"
 // @import "blocks/key_figures"
 @import "blocks/pages"
