--- a/assets/sass/_default/partials/_top.sass
+++ b/assets/sass/_default/partials/_top.sass
@@ -3,3 +3,7 @@
     h2
         @extend .h4
         margin-bottom: 0
+
+    @include in-page-without-aside
+        h2
+            @extend .surtitle
