--- a/assets/sass/blocks/_call_to_action.sass
+++ b/assets/sass/blocks/_call_to_action.sass
@@ -1,5 +1,9 @@
 .block-call_to_action
     .call_to_action
+        p
+            a
+                color: white
+                text-decoration-color: white
         > div
             // button
             div + div,
