--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -2,11 +2,31 @@
     > *
         padding-bottom: 8rem
         padding-top: 4rem
+        position: relative
         @include media-breakpoint-down(md)
             padding-bottom: 3rem
             padding-top: 1rem
 
+        &::before
+            background: $border-color
+            content: ''
+            height: 1px
+            left: $container-gutter-width
+            position: absolute
+            right: $container-gutter-width
+            top: 0
+            @include media-breakpoint-up(md)
+                left: $container-gutter-width-md
+                right: $container-gutter-width-md
+
+            aside ~ &
+                @include media-breakpoint-up(md)
+                    left: calc(100% / 12 * 5 + (#{$grid-gutter-width} / 2) + (#{$grid-gutter-width} / 11))
+
     &-chapo
+        > *
+            &::before
+                content: none
         .container
             padding-bottom: 4rem
             .lead
