--- a/assets/sass/persons/_pages.sass
+++ b/assets/sass/persons/_pages.sass
@@ -16,3 +16,18 @@
     .block-timeline,
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $institute-color
+
+    main
+        > div
+            > aside
+                > div
+                    > *
+                        @extend .col-md-4
+                @include media-breakpoint-up(md)
+                    ~ *
+                        .container
+                            > *
+                                &:not(.call_to_action)
+                                    padding-left: col(5)
+                                &.call_to_action
+                                    margin-left: col(5)
