--- a/assets/sass/diplomas/_pages.sass
+++ b/assets/sass/diplomas/_pages.sass
@@ -24,3 +24,11 @@
     .block-timeline,
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $program-color
+
+
+.diplomas__taxonomy
+    .diplomas
+        @include media-breakpoint-up(md)
+            margin-bottom: px2rem(120)
+        @include media-breakpoint-up(lg)
+            margin-bottom: px2rem(160)
