--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -2,7 +2,6 @@
     > *
         padding-bottom: 8rem
         padding-top: 4rem
-        position: relative
         @include media-breakpoint-down(md)
             padding-bottom: 3rem
             padding-top: 1rem
@@ -12,9 +11,9 @@
             content: ''
             height: 1px
             left: $container-gutter-width
+            margin-top: -4rem
             position: absolute
             right: $container-gutter-width
-            top: 0
             @include media-breakpoint-up(md)
                 left: $container-gutter-width-md
                 right: $container-gutter-width-md
