--- a/layouts/persons/list.html
+++ b/layouts/persons/list.html
@@ -11,7 +11,7 @@
 
   {{- if not $is_organigram_present -}}
     <div class="container">
-      {{ partial "pages/chapo.html" .Params.description_short }}
+      {{ partial "persons/chapo.html" .Params.description_short }}
       {{ partial "persons/taxonomies.html" . }}
       {{ partial "persons/list.html" . }}
     </div>
@@ -44,7 +44,7 @@
                 {{- end -}}
               </figure>
             {{- end -}}
-            {{ partial "pages/chapo.html" .Params.description_short }}
+            {{ partial "persons/chapo.html" .Params.description_short }}
           </div>
         </div>
       </div>
