--- a/layouts/partials/blocks/templates/gallery/layout-carousel.html
+++ b/layouts/partials/blocks/templates/gallery/layout-carousel.html
@@ -4,7 +4,7 @@
 {{ end }}
 
 {{- if $is_carousel }}
-<div class="splide" role="group" data-splide='{"arrows":true,"perPage":1,"perMove":1,"pagination":false,"autoplay":false,"gap":"60px", "breakpoints":{"640":{"gap":"30px"}} }'>
+<div class="splide" role="group" data-splide='{"arrows":true,"perPage":1,"perMove":1,"pagination":false,"autoplay":false,"autoWidth":true,"gap":"60px", "breakpoints":{"640":{"gap":"30px"}} }'>
   <div class="splide__track">
     <div class="splide__list">
 {{ end -}}
