fix timeline title border top

--- a/assets/sass/_theme/blocks/_timeline.sass
+++ b/assets/sass/_theme/blocks/_timeline.sass
@@ -5,7 +5,8 @@
     overflow: hidden
     padding-bottom: $grid-gutter-width
     padding-top: $grid-gutter-width
-
+    &::before
+        display: none
     .timeline-arrows
         display: flex
         > button
