fix key figures

--- a/assets/sass/_theme/blocks/_key_figures.sass
+++ b/assets/sass/_theme/blocks/_key_figures.sass
@@ -14,6 +14,7 @@
         dt
             font-size: px2rem(16)
             strong
+                display: inline-block
                 font-size: px2rem(32)
             @include media-breakpoint-up(md)
                 font-size: px2rem(18)
