Fix arrow animation

--- a/assets/sass/_default/abstracts/_mixins.sass
+++ b/assets/sass/_default/abstracts/_mixins.sass
@@ -1,6 +1,7 @@
 @mixin hover-translate-icon($pseudo: after, $distance: 10)
     &::#{$pseudo}
         transition: transform 0.55s $arrow-ease-transition
+        transform: translateX(0)
     &:hover
         &::#{$pseudo}
             transform: translateX(#{px2rem($distance)})
