--- a/assets/sass/_theme/_default/base/_fonts.sass
+++ b/assets/sass/_theme/_default/base/_fonts.sass
@@ -1,18 +1,18 @@
 @font-face
     font-display: swap
-    font-family: 'basier_circle'
+    font-family: 'Basier Circle'
     font-style: normal
     font-weight: 500
-    src: url('../fonts/Basier-Circle-medium/basiercircle-medium.eot')
-    src: url('../fonts/Basier-Circle-medium/basiercircle-medium.eot?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-medium/basiercircle-medium.woff2') format('woff2'), url('../fonts/Basier-Circle-medium/basiercircle-medium.woff') format('woff'), url('../fonts/Basier-Circle-medium/basiercircle-medium.ttf') format('truetype')
+    src: url('../fonts/Basier-Circle-medium/basiercircle-medium-webfont.eot')
+    src: url('../fonts/Basier-Circle-medium/basiercircle-medium-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-medium/basiercircle-medium-webfont.woff2') format('woff2'), url('../fonts/Basier-Circle-medium/basiercircle-medium-webfont.woff') format('woff'), url('../fonts/Basier-Circle-medium/basiercircle-medium-webfont.ttf') format('truetype')
 
 @font-face
     font-display: swap
-    font-family: 'basier_circle'
+    font-family: 'Basier Circle'
     font-style: normal
     font-weight: 600
-    src: url('../fonts/Basier-Circle-semibold/basiercircle-semibold.eot')
-    src: url('../fonts/Basier-Circle-semibold/basiercircle-semibold.eot?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-semibold/basiercircle-semibold.woff2') format('woff2'), url('../fonts/Basier-Circle-semibold/basiercircle-semibold.woff') format('woff'), url('../fonts/Basier-Circle-semibold/basiercircle-semibold.ttf') format('truetype')
+    src: url('../fonts/Basier-Circle-semibold/basiercircle-semibold.eot-webfont')
+    src: url('../fonts/Basier-Circle-semibold/basiercircle-semibold.eot-webfont?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-semibold/basiercircle-semibold-webfont.woff2') format('woff2'), url('../fonts/Basier-Circle-semibold/basiercircle-semibold-webfont.woff') format('woff'), url('../fonts/Basier-Circle-semibold/basiercircle-semibold-webfont.ttf') format('truetype')
 
 @font-face
     font-display: swap
