--- a/assets/sass/_theme/blocks/_key_figures.sass
+++ b/assets/sass/_theme/blocks/_key_figures.sass
@@ -5,6 +5,7 @@
         margin-bottom: 0
         padding-left: 0
         li
+            margin-bottom: 3rem
             @extend .col-6
             @include in-page-with-aside
                 @extend .col-md-4
