--- a/assets/sass/home/_pages.sass
+++ b/assets/sass/home/_pages.sass
@@ -17,6 +17,7 @@
                 z-index: 1
                 @include media-breakpoint-up(lg)
                     max-width: 50%
+                    padding-right: calc(#{$grid-gutter-width} / 2)
         picture
             @include media-breakpoint-down(lg)
                 aspect-ratio: 8/6
