--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -23,16 +23,32 @@
             @extend .h5
         .post-categories
             margin-bottom: calc(#{$spacer} * 2)
-        div + div
-            border-top: 1px solid black
-        div:not([itemprop="articleSection"])
-            display: flex
-            justify-content: space-between
-            padding-top: $spacer
+        .infos
+            div + div
+                position: relative
+                &::before
+                    background-color: black
+                    content: ''
+                    height: 1px
+                    left: calc(var(--bs-gutter-x) * .5)
+                    position: absolute
+                    right: calc(var(--bs-gutter-x) * .5)
+                    top: 0
+            div:not([itemprop="articleSection"])
+                display: flex
+                justify-content: space-between
+                padding-top: $spacer
 
     .block-timeline,
     aside ~ .blocks .block-call_to_action .call_to_action > div
         background-color: $post-color
+
+    .content-blocks
+        > aside
+            > div
+                flex-direction: column
+                > *
+                    @extend .col-md-3
 
 .posts__page
     .lead
