add pagination between for post block

--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -30,3 +30,12 @@
             padding-bottom: 4rem
             .lead
                 margin-bottom: 0
+
+    &-pagination
+        > *
+            &::before
+                content: none
+        .container
+            padding-top: 0
+        .pagination-between-pages
+            margin-top: 0
