--- a/assets/sass/_vendors/bootstrap/_pagination.sass
+++ b/assets/sass/_vendors/bootstrap/_pagination.sass
@@ -1,7 +1,7 @@
 .pagination
     margin-top: 0
     &-between-pages
-        margin-top: $grid-gutter-width
+        margin-top: 4rem
 
     li
         font-size: px2rem(14)
