--- a/layouts/partials/posts/aside.html
+++ b/layouts/partials/posts/aside.html
@@ -1,20 +1,6 @@
 <aside>
-  <div class="infos">
-    {{- if .Params.Categories }}
-    <div itemprop="articleSection">
-      <p>
-        {{- if gt (len .Params.Categories) 1 -}}
-          {{ i18n "posts.categories" }}
-        {{- else -}}
-          {{ i18n "posts.category" }}
-        {{- end -}}
-      </p>
-      {{ partial "posts/categories.html" . }}
-    </div>
-    {{ end -}}
-    <div>
-      <p>{{ i18n "commons.share" }}</p>
-      {{ partial "commons/share.html" }}
-    </div>
+  <div>
+    {{- partial "posts/post-infos.html" . -}}
+    {{- partial "posts/toc.html" . -}}
   </div>
 </aside>
