--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -6,7 +6,7 @@
             padding-bottom: 3rem
             padding-top: 1rem
 
-        &::before
+        &.block-with-title::before
             background: $border-color
             content: ''
             height: 1px
