--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -1,26 +1,30 @@
 .blocks
     > *
         padding-bottom: 8rem
-        padding-top: 4rem
+        padding-top: 0
         @include media-breakpoint-down(md)
             padding-bottom: 3rem
-            padding-top: 1rem
+            padding-top: 0
 
-        &.block-with-title::before
-            background: $border-color
-            content: ''
-            height: 1px
-            left: $container-gutter-width
-            margin-top: -4rem
-            position: absolute
-            right: $container-gutter-width
-            @include media-breakpoint-up(md)
-                left: $container-gutter-width-md
-                right: $container-gutter-width-md
-
-            aside ~ &
+        &.block-with-title
+            padding-top: 4rem
+            @include media-breakpoint-down(md)
+                padding-top: 1rem
+            &::before
+                background: $border-color
+                content: ''
+                height: 1px
+                left: $container-gutter-width
+                margin-top: -4rem
+                position: absolute
+                right: $container-gutter-width
                 @include media-breakpoint-up(md)
-                    left: calc(100% / 12 * 5 + (#{$grid-gutter-width} / 2) + (#{$grid-gutter-width} / 11))
+                    left: $container-gutter-width-md
+                    right: $container-gutter-width-md
+
+                aside ~ &
+                    @include media-breakpoint-up(md)
+                        left: calc(100% / 12 * 5 + (#{$grid-gutter-width} / 2) + (#{$grid-gutter-width} / 11))
 
     &-chapo
         > *
