--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -28,6 +28,9 @@
 
     &-chapo
         > *
+            padding-top: 4rem
+            @include media-breakpoint-down(md)
+                padding-top: 1rem
             &::before
                 content: none
         .container
