--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -7,6 +7,7 @@
 @import "_default/layouts/header"
 @import "_default/layouts/main"
 
+@import "_default/partials/featured-image"
 @import "_default/partials/hero"
 @import "_default/partials/menu"
 @import "_default/partials/menu-expand"
