--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -136,6 +136,13 @@
             @include media-breakpoint-up(md)
                 padding-left: calc(#{$grid-gutter-width} / 2)
 
+    .subpart:not(:last-of-type)
+        margin-bottom: 3rem
+        @include media-breakpoint-up(md)
+            margin-bottom: px2rem(120)
+        @include media-breakpoint-up(lg)
+            margin-bottom: px2rem(160)
+
     .page-with-blocks
         .programs
             @include media-breakpoint-up(md)
