border media post

--- a/assets/sass/_theme/posts/_widgets.sass
+++ b/assets/sass/_theme/posts/_widgets.sass
@@ -9,6 +9,11 @@
         padding-right: 0
 
     .media
+        picture
+            border: 1px solid rgba(black, .1)
+        picture,
+        img
+            display: block
         img
             height: auto
             width: 100%
