--- a/assets/sass/_theme/persons/_pages.sass
+++ b/assets/sass/_theme/persons/_pages.sass
@@ -14,9 +14,20 @@
     .hero
         background-color: $institute-color
     .toc
+        @include media-breakpoint-down(md)
+            border-top: 1px solid rgba(white, .2)
+            padding-bottom: px2rem(20)
+            padding-top: px2rem(20)
         .active
             color: $institute-color
 
+    .content-blocks
+        > aside
+            div
+                @include media-breakpoint-down(md)
+                    margin-left: 0
+                    margin-right: 0
+    
 .persons__page
     main
         .content
