figcation on mobile

--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -29,6 +29,9 @@
             margin-left: - $container-gutter-width
             margin-right: - $container-gutter-width
             margin-top: - 4rem
+            figcaption
+                padding-left: $container-gutter-width
+                padding-right: $container-gutter-width
 
 .pages__section
     main
