featured image on mobile

--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -26,9 +26,12 @@
 
     @include media-breakpoint-down(md)
         .featured-image
+            border: 0
             margin-left: - $container-gutter-width
             margin-right: - $container-gutter-width
-            margin-top: - 4rem
+            margin-top: - 1rem
+            picture
+                border: 0
             figcaption
                 padding-left: $container-gutter-width
                 padding-right: $container-gutter-width
