--- a/assets/sass/_theme/blocks/_blocks.sass
+++ b/assets/sass/_theme/blocks/_blocks.sass
@@ -38,7 +38,8 @@
         .container
             padding-bottom: 4rem
             .lead
-                margin-bottom: 0
+                body:not(.posts__page) &
+                    margin-bottom: 0
 
     &-pagination
         > *
