key figures style

--- a/assets/sass/_theme/blocks/_key_figures.sass
+++ b/assets/sass/_theme/blocks/_key_figures.sass
@@ -1,4 +1,7 @@
 .block-key_figures
+    .top
+        .description
+            margin-top: 1.5rem
     ul
         @extend .row
         list-style: none
