--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -66,9 +66,8 @@
                             &.call_to_action
                                 margin-left: col(5)
 
-
 .posts__page
     .lead
         @extend .h3
-        @include media-breakpoint-up(md)
-            margin-bottom: calc(#{$spacer} * 5)
+    .featured-image
+        margin-bottom: 0
