--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -3,7 +3,9 @@
   <div class="container">
     <div>
       <h1>{{ partial "PrepareHTML" $title }}</h1>
-      <p>Le plus court chemin pour aller loin</p>
+      {{- if (partial "GetTextFromHTML" .Params.description_short) -}}
+        <p>{{ partial "PrepareHTML" .Params.description_short }}</p>
+      {{- end -}}
     </div>
     {{- if .Params.image }}
       {{ partial "commons/image.html"
