--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -41,7 +41,7 @@ p, li
     line-height: 140%
     // @include media-breakpoint-up(lg)
     //     font-size: px2rem(18)
-    @include media-breakpoint-up(xxl)
+    @include media-breakpoint-up(xl)
         font-size: px2rem(20)
         line-height: 150%
 
