--- a/assets/sass/_default/partials/_featured-image.sass
+++ b/assets/sass/_default/partials/_featured-image.sass
@@ -2,3 +2,8 @@
 picture.featured-image
     border: 1px solid rgba(black, .1)
     display: block
+
+.featured-image
+    figcaption
+        p:last-child
+            margin-bottom: 0
