--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -81,6 +81,8 @@
                     color: white
                     line-height: 120%
                     transition: opacity 0.4s
+                    &:hover
+                        text-decoration-color: white
             .active
                 opacity: 0.7
 
