--- a/assets/sass/sitemap/_pages.sass
+++ b/assets/sass/sitemap/_pages.sass
@@ -36,5 +36,10 @@
                 > a
                     @extend .tabtitle
                     color: $gray-500
+                    &:hover
+                        text-decoration-color: $gray-500
+
         .active
             color: $site-color
+            &:hover
+                text-decoration-color: $site-color
