timeline fix passed

--- a/assets/sass/_theme/blocks/_timeline.sass
+++ b/assets/sass/_theme/blocks/_timeline.sass
@@ -62,6 +62,7 @@
                 width: 9px
         &.is-passed
             opacity: 0.15
+            pointer-events: none
 
 
     @include media-breakpoint-down(md)
